@@ -1,0 +1,30 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/cspad2x2.ddl.h"
+namespace Psana {
+namespace CsPad2x2 {
+
+CsPad2x2DigitalPotsCfg::~CsPad2x2DigitalPotsCfg() {}
+
+
+CsPad2x2ReadOnlyCfg::~CsPad2x2ReadOnlyCfg() {}
+
+
+ProtectionSystemThreshold::~ProtectionSystemThreshold() {}
+
+
+CsPad2x2GainMapCfg::~CsPad2x2GainMapCfg() {}
+
+
+ConfigV1QuadReg::~ConfigV1QuadReg() {}
+
+
+ConfigV1::~ConfigV1() {}
+
+
+ElementV1::~ElementV1() {}
+
+} // namespace CsPad2x2
+} // namespace Psana
