@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-01
+2012-02-06 Andy Salnikov
+- adding forgotten cspad2x2.ddl.* files
+
 Tag: V00-02-00
 2012-02-06 Andy Salnikov
 - regenerate whole thing from psddldata V00-02-00
